tests/regression/errors/basic/import_error_24.csd
// Import error test 24
yeet "nonexistent_module_24"
sus result drip = some_function(24)
